tests/negative/typecheck/annotation.orng
fn main() -> Int
    let x: Int = (a: Int)
    0